addressing code quality issues #EA-3584